--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "json_the_cat",
   "version": "1.0.0",
   "description": "",
-  "main": "breedFetcher.js",
+  "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha"
   },
   "repository": {
     "type": "git",
@@ -19,5 +19,9 @@
   "homepage": "https://github.com/wilwong89/json_the_cat#readme",
   "dependencies": {
     "request": "^2.88.0"
+  },
+  "devDependencies": {
+    "chai": "^4.2.0",
+    "mocha": "^7.0.0"
   }
 }
